backstage/templates/backstage-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backstage-backend
  name: backstage-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backstage-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: backstage-backend
    spec:
      containers:
        - env:
            - name: DB_SERVER
              value: db
            - name: POSTGRES_DB
              value: backstage
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: inpixon.jfrog.io/backstage/backend:latest
          name: backstage-backend
          ports:
            - containerPort: 7000
          resources: {}
      restartPolicy: Always
status: {}
