backstage/templates/backstage-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backstage-backend
  name: backstage-backend
spec:
  ports:
    - name: "7000"
      port: 7000
      targetPort: 7000
  selector:
    io.kompose.service: backstage-backend
status:
  loadBalancer: {}
