backstage/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (HEAD)
    kubernetes.io/ingress.class: "nginx"
  creationTimestamp: null
  labels:
    io.kompose.service: webapp
  name: developer.inpixondev
spec:
  tls:
    - secretName: echo-tls
      hosts:
        - developer.inpixondev.com
  rules:
    - host: "developer.inpixondev.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: webapp
              servicePort: 3000
status:
  loadBalancer: {}
